<resources>
    <string name="app_name">CalculaFlex</string>
    <string name="header_gas_station">Posto de Combustível</string>
    <string name="header_gasoline_price">Preço Gasolina</string>
    <string name="header_etanol_price">Preço Etanol</string>
    <string name="header_average">Consumo Médio</string>
    <string name="header_average_gasoline">Km/L Gasolina</string>
    <string name="header_average_etanol">Km/L Etanol</string>
    <string name="header_sugestion">Sugestão de Abastecimento</string>
    <string name="hint_price">Ex.: 3,50</string>
    <string name="hint_average">Ex.: 9,5</string>
    <string name="hint_result">Resultado</string>
    <string name="hint_value">0,00</string>
    <string name="calculate">Calcular</string>
    <string name="gasolina">Gasolina</string>
    <string name="etanol">Etanol</string>
    <string name="header_spent">Gasto R$/Km</string>
    <string name="hint_fuel_ratio">Relação Gasolina/Etanol: %1$f</string>


</resources>
