<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View style="@style/divider" />

    <LinearLayout
        style="@style/container_row">

        <TextView
            style="@style/header_title"
            android:drawableLeft="@drawable/analysis_icon"
            android:text="@string/header_sugestion"/>

    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout style="@style/container_row"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            style="@style/value_spent_footer"
            android:id="@+id/tvCombustivelSugerido"
            android:text="@string/hint_result"/>

    </LinearLayout>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/tvPerformanceCombustivel"
        android:text="@string/hint_fuel_ratio"/>

</LinearLayout>